# clintercept

./: CLInterceptConfig.txt  CMakeLists.txt  LICENSE.txt  Makefile  README.md  README.txt
cmake/: FindOpenCL.cmake
scripts/: gensource.py
src/: clinfo.c  clint.c  clint.h  clint_atomic.h  clint_config.c  clint_config.h  clint_data.c  clint_data.h  clint_log.c  clint_log.h  clint_mem.c  clint_mem.h  clint_obj.c  clint_obj.h  clint_res.c  clint_res.h  clint_stack.c  clint_stack.h  clint_thread.c  clint_thread.h  clint_tree.c  clint_tree.h
test/: test_clint.c  test_tree.c
